2001-10-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-server.ht (Links): Mention systemwide configuration file
	/etc/tmdarc.
	
2001-10-22  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* index.ht (Links): Move historical information into history.ht.
	
	* history.ht (Links): New file detailing TMDA's historical
	progress.
	
	* support-links.h: Move External Resources link to the Support
	subsection from the Overview subsection.
	
	* resources.ht (Links): Added link to Lou Hevly's tmda_confirm.pl.

	* faq.ht (Links): Clarify that tmda-clean should be run from the
	user account that owns the pending queue, not from root.

2001-10-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* requirements.ht (Links): Claify that TMDA only uses the local
	delivery agent internally to do final mail final delivery.  Users
	don't need to maintain filter files.

	* resources.ht (Links): Changed "Other" to "External".

	* index.ht (Links): Emphasize test mailto: link.

2001-10-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* features.ht (Links): Mention the WHITELIST_AUTO_APPEND feature.

	* index.ht (Links): Ditto.
	
2001-10-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* install.ht (Links): Add installation instructions for Linux RPMs.

	* results.ht (Links): Add an even better testimonial from Dave
	Sill - Message-ID: <wx0d74734sb.fsf@sws5.ctd.ornl.gov>

	* config.ht (Links): Just link to the two sections.

	* config-server.ht (Links): Mention that you should add your own
	e-mail address to the whitelist to facilitate initial testing.
	Also suggest a minimal .procmailrc-tmda.

	(Links): Mention that "-" is also an acceptable value for
	Postfix's recipient_delimiter.
	
	(Postfix): Instruct the user to setup LOCAL_DELIVERY_AGENT before
	setting up .forward.

	* config.ht (Links): Emphasize the left sidebar.

	* features.ht (Links): Changed wording, third-party delivery agent
	is required for non-qmail.
