@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Oct 22 15:53:10 2001 -->
+<!-- Thu Oct 25 11:02:18 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -378,7 +378,10 @@ be accomplished with the following addition to your .gnus file:
 
 <strong>tmda-sender-address</strong> can be used to generate
 subscription addresses for mailing lists without worry that the
-subscription list might get harvested by spammers.  For example:
+subscription list might get harvested by spammers.  The address to use
+can be found in the <b>Return-Path</b> header of a mailing list message.
+
+  For example:
   
 <blockquote>
 <pre>
