@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Oct 22 15:53:10 2001 -->
+<!-- Thu Oct 25 11:11:59 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -207,7 +207,25 @@ morning at 2AM, add the following crontab entry:
 
 <hr>
 
+<li><b>
+How do I allow my <a href="http://cr.yp.to/ezmlm.html" TARGET="Resource Window">ezmlm</a>
+mailing lists to pass through TMDA?  Each list message is sent out 
+with a different envelope sender address.
+</b>
+<br><br>
 
+You can whitelist the ezmlm list using wildcard characters.  Here is
+an example whitelist entry for the qmail mailing list:
+
+<blockquote><code>
+qmail-return-*@list.cr.yp.to
+</blockquote></code>
+
+This will allow messages to get through when initially interacting
+with ezmlm to get subscribed, as well as after when list messages are
+delivered.
+
+<hr>
 </TD><!-- end of body cell -->
 </TR><!-- end of sidebar/body row -->
 </TABLE><!-- end of page table -->
